deploy react to github

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/zhanibekabi/react-project.git",
+  "homepage": "https://zhanibekabi/github.io/New",
   "name": "new",
   "private": true,
   "version": "0.0.0",
